--- a/Plant/Areas/Admin/Views/Shared/_navigationAdminLayout.cshtml
+++ b/Plant/Areas/Admin/Views/Shared/_navigationAdminLayout.cshtml
@@ -8,151 +8,6 @@
                         <span class="feather-icon"><i data-feather="activity"></i></span>
                         <span class="nav-link-text">Dashboard</span>
                     </a>
-                    <ul id="dash_drp" class="nav flex-column collapse collapse-level-1">
-                        <li class="nav-item">
-                            <ul class="nav flex-column">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="dashboard1.html">CRM</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="dashboard2.html">Project</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="dashboard3.html">Statistics</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="dashboard4.html">Classic</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="dashboard5.html">Analytics</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link link-with-badge" href="javascript:void(0);" data-toggle="collapse" data-target="#app_drp">
-                        <span class="feather-icon"><i data-feather="package"></i></span>
-                        <span class="nav-link-text">Application</span>
-                        <span class="badge badge-primary badge-pill">4</span>
-                    </a>
-                    <ul id="app_drp" class="nav flex-column collapse collapse-level-1">
-                        <li class="nav-item">
-                            <ul class="nav flex-column">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="chats.html">Chat</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="calendar.html">Calendar</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="email.html">Email</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="file-manager.html">File Manager</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);" data-toggle="collapse" data-target="#auth_drp">
-                        <span class="feather-icon"><i data-feather="zap"></i></span>
-                        <span class="nav-link-text">Authentication</span>
-                    </a>
-                    <ul id="auth_drp" class="nav flex-column collapse collapse-level-1">
-                        <li class="nav-item">
-                            <ul class="nav flex-column">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="javascript:void(0);" data-toggle="collapse" data-target="#signup_drp">
-                                        Sign Up
-                                    </a>
-                                    <ul id="signup_drp" class="nav flex-column collapse collapse-level-2">
-                                        <li class="nav-item">
-                                            <ul class="nav flex-column">
-                                                <li class="nav-item">
-                                                    <a class="nav-link" href="signup.html">Cover</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="nav-link" href="signup-simple.html">Simple</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="javascript:void(0);" data-toggle="collapse" data-target="#signin_drp">
-                                        Login
-                                    </a>
-                                    <ul id="signin_drp" class="nav flex-column collapse collapse-level-2">
-                                        <li class="nav-item">
-                                            <ul class="nav flex-column">
-                                                <li class="nav-item">
-                                                    <a class="nav-link" href="login.html">Cover</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="nav-link" href="login-simple.html">Simple</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="javascript:void(0);" data-toggle="collapse" data-target="#recover_drp">
-                                        Recover Password
-                                    </a>
-                                    <ul id="recover_drp" class="nav flex-column collapse collapse-level-2">
-                                        <li class="nav-item">
-                                            <ul class="nav flex-column">
-                                                <li class="nav-item">
-                                                    <a class="nav-link" href="forgot-password.html">Forgot Password</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="nav-link" href="reset-password.html">Reset Password</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="lock-screen.html">Lock Screen</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="404.html">Error 404</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="maintenance.html">Maintenance</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="javascript:void(0);" data-toggle="collapse" data-target="#pages_drp">
-                        <span class="feather-icon"><i data-feather="file-text"></i></span>
-                        <span class="nav-link-text">Pages</span>
-                    </a>
-                    <ul id="pages_drp" class="nav flex-column collapse collapse-level-1">
-                        <li class="nav-item">
-                            <ul class="nav flex-column">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="profile.html">Profile</a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="invoice.html">Invoice</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="gallery.html">Gallery</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="activity.html">Activity</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="faq.html">Faq</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
                 </li>
             </ul>
             <hr class="nav-separator">
@@ -173,10 +28,10 @@
                                     <a class="nav-link" asp-area="Admin" asp-controller="AdminLanguages" asp-action="Index">Ngôn ngữ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Identity" asp-page="/Role/IndexRole">Quyền truy cập</a>
+                                    <a class="nav-link" asp-page="/Role/Index">Quyền truy cập</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="AdminUsers" asp-action="Index">Tài khoản</a>
+                                    <a class="nav-link" asp-area="Admin" asp-controller="AdminAspNetUsers" asp-action="Index">Danh sách tài khoản</a>
                                 </li>
                             </ul>
                         </li>
@@ -239,28 +94,10 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);" data-toggle="collapse" data-target="#tables_drp">
+                    <a class="nav-link" asp-area="Admin" asp-controller="AdminFeedbacks" asp-action="Index">
                         <span class="feather-icon"><i data-feather="list"></i></span>
                         <span class="nav-link-text">Phản hồi</span>
                     </a>
-                    <ul id="tables_drp" class="nav flex-column collapse collapse-level-1">
-                        <li class="nav-item">
-                            <ul class="nav flex-column">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="basic-table.html">Basic Table</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="data-table.html">Data Table</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="responsive-table.html">Responsive Table</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="editable-table.html">Editable Table</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" asp-area="Admin" asp-controller="AdminContacts" asp-action="Index">
