--- a/Plant/Views/Shared/_LoginPartial.cshtml
+++ b/Plant/Views/Shared/_LoginPartial.cshtml
@@ -8,8 +8,14 @@
     var user = await UserManager.GetUserAsync(User);
     var firstName = user.FirstName;
 
-    <a asp-area="" asp-controller="Users" asp-action="Index"><i class="fa-solid fa-user"></i> @firstName</a>
+    <a><i class="fa-solid fa-user"></i> @firstName</a>
     <ul class="dropdown_links">
+        <li>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Tài khoản của tôi</a>
+        </li>
+        <li>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="ManageOrder">Đơn mua</a>
+        </li>
         <li>
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post">
                 <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
