--- a/Plant/Views/Users/Index.cshtml
+++ b/Plant/Views/Users/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.AspNetCore.Identity
+@using Plant.Areas.Identity.Data
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 @inject IViewLocalizer Localizer
 @{
@@ -16,61 +20,45 @@
                     <!-- Nav tabs -->
                     <div class="dashboard_tab_button">
                         <ul role="tablist" class="nav flex-column dashboard-list">
-                            <li><a href="#dashboard" data-bs-toggle="tab" class="nav-link active">Thông tin cá nhân</a></li>
-                            <li> <a href="#orders" data-bs-toggle="tab" class="nav-link">Quản lí đơn hang</a></li>
-                            <li><a href="#downloads" data-bs-toggle="tab" class="nav-link">Downloads</a></li>
-                            <li><a href="#address" data-bs-toggle="tab" class="nav-link">Addresses</a></li>
-                            <li>
-                                <a href="#account-details" data-bs-toggle="tab" class="nav-link">Account details</a>
-                            </li>
-                            <li><a asp-area="Identity" asp-controller="Account" asp-action="Logout" class="nav-link">logout</a></li>
+                            <li><a asp-area="" asp-controller="Users" asp-action="Index"  class="nav-link active">Tài khoản của tôi</a></li>
+                            <li> <a asp-area="" asp-controller="Users" asp-action="ManageOrder"  class="nav-link">Đơn mua</a></li>
+                            <li><a href="#downloads"  class="nav-link">Thông báo</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-9 col-lg-9">
                     <!-- Tab panes -->
                     <div class="tab-content dashboard_content">
-                        <div class="tab-pane fade show active" id="dashboard">
-                            <h3>Dashboard </h3>
-                            <p>
-                                From your account dashboard. you can easily check &amp; view your <a href="#">
-                                    recent
-                                    orders
-                                </a>, manage your <a href="#">shipping and billing addresses</a> and <a href="#">Edit your password and account details.</a>
-                            </p>
-                        </div>
-                        <div class="tab-pane fade" id="orders">
-                            <h3>Orders</h3>
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Order</th>
-                                            <th>Date</th>
-                                            <th>Status</th>
-                                            <th>Total</th>
-                                            <th>Actions</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>May 10, 2018</td>
-                                            <td><span class="success">Completed</span></td>
-                                            <td>$25.00 for 1 item </td>
-                                            <td><a href="cart.html" class="view">view</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>May 10, 2018</td>
-                                            <td>Processing</td>
-                                            <td>$17.00 for 1 item </td>
-                                            <td><a href="cart.html" class="view">view</a></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            var user = await UserManager.GetUserAsync(User);
+                            var firstName = user.FirstName;
+                            var lastName = user.LastName;
+                            var email = user.Email;
+                            var phone = user.PhoneNumber;
+                            <div class="tab-pane fade show active">
+                                <h3>Hồ sơ của tôi </h3>
+                                <p>Quản lý thông tin hồ sơ để bảo mật tài khoản</p>
+                                <div class="row">
+                                    <div class="col-lg-6 col-md-6 col-sm-12 form-group mb-20">
+                                        <label for="lastName">Last Name</label>
+                                        <input class="form-control" value="@lastName" readonly>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 form-group mb-20">
+                                        <label for="lastName">First Name</label>
+                                        <input class="form-control" value="@firstName" readonly>
+                                    </div>
+                                    <div class="form-group mb-20">
+                                        <label for="lastName">Email</label>
+                                        <input class="form-control" value="@email" readonly>
+                                    </div>
+                                    <div class="form-group mb-20">
+                                        <label for="lastName">Phone</label>
+                                        <input class="form-control" value="@phone" readonly>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                        }
                         <div class="tab-pane fade" id="downloads">
                             <h3>Downloads</h3>
                             <div class="table-responsive">
@@ -98,75 +86,6 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                            </div>
-                        </div>
-                        <div class="tab-pane" id="address">
-                            <p>The following addresses will be used on the checkout page by default.</p>
-                            <h4 class="billing-address">Billing address</h4>
-                            <a href="#" class="view">Edit</a>
-                            <p><strong>Bobby Jackson</strong></p>
-                            <address>
-                                <span><strong>City:</strong> Seattle</span>,
-                                <br>
-                                <span><strong>State:</strong> Washington(WA)</span>,
-                                <br>
-                                <span><strong>ZIP:</strong> 98101</span>,
-                                <br>
-                                <span><strong>Country:</strong> USA</span>
-                            </address>
-                        </div>
-                        <div class="tab-pane fade" id="account-details">
-                            <h3>Account details </h3>
-                            <div class="login">
-                                <div class="login_form_container">
-                                    <div class="account_login_form">
-                                        <form action="#">
-                                            <p>Already have an account? <a href="#">Log in instead!</a></p>
-                                            <div class="input-radio">
-                                                <span class="custom-radio">
-                                                    <input type="radio" value="1"
-                                                           name="id_gender"> Mr.
-                                                </span>
-                                                <span class="custom-radio">
-                                                    <input type="radio" value="1"
-                                                           name="id_gender"> Mrs.
-                                                </span>
-                                            </div> <br>
-                                            <label>First Name</label>
-                                            <input type="text" name="first-name">
-                                            <label>Last Name</label>
-                                            <input type="text" name="last-name">
-                                            <label>Email</label>
-                                            <input type="text" name="email-name">
-                                            <label>Password</label>
-                                            <input type="password" name="user-password">
-                                            <label>Birthdate</label>
-                                            <input type="text" placeholder="MM/DD/YYYY" value="" name="birthday">
-                                            <span class="example">
-                                                (E.g.: 05/31/1970)
-                                            </span>
-                                            <br>
-                                            <span class="custom_checkbox">
-                                                <input type="checkbox" value="1" name="optin">
-                                                <label>Receive offers from our partners</label>
-                                            </span>
-                                            <br>
-                                            <span class="custom_checkbox">
-                                                <input type="checkbox" value="1" name="newsletter">
-                                                <label>
-                                                    Sign up for our newsletter<br><em>
-                                                        You may unsubscribe at any
-                                                        moment. For that purpose, please find our contact info in
-                                                        the legal notice.
-                                                    </em>
-                                                </label>
-                                            </span>
-                                            <div class="save_button primary_btn default_button">
-                                                <button type="submit">Save</button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
